2024-03-04T01:04:56Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8134453734 # 171
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-03-04
* notice: last 14d: unq all: 2 4127
* notice: prev accum: outdated-unq outdated-all / unq all: 1958 193024 / 1986 197429
* notice: next accum: outdated-unq outdated-all / unq all: 1959 193323 / 1986 197525
* notice: prev exec diff / last date diff / accum: unq all: +0 +96 -0 -75 / +2 +301 -0 -0 / 2 301
* notice: removed / changed dates: [2024-02-18] / [2024-02-19 2024-03-03]

2024-03-03T16:16:27Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8131488029 # 170
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-03-03
* notice: last 14d: unq all: 2 4146
* notice: prev accum: outdated-unq outdated-all / unq all: 1958 193024 / 1986 197336
* notice: next accum: outdated-unq outdated-all / unq all: 1958 193024 / 1986 197429
* notice: prev exec diff / last date diff / accum: unq all: +0 +93 -0 -93 / +2 +205 -0 -0 / 2 205
* notice: removed / changed dates: [] / [2024-02-18 2024-03-03]

2024-03-03T08:19:20Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8128876803 # 169
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-03-03
* notice: last 14d: unq all: 2 4146
* notice: prev accum: outdated-unq outdated-all / unq all: 1958 193024 / 1984 197224
* notice: next accum: outdated-unq outdated-all / unq all: 1958 193024 / 1986 197336
* notice: prev exec diff / last date diff / accum: unq all: +2 +112 -0 -91 / +2 +112 -0 -0 / 2 112
* notice: removed / changed dates: [] / [2024-02-18 2024-03-03]

2024-03-03T01:07:26Z: