@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2024-03-04T01:04:56Z",
-  "count" : 223,
+  "timestamp" : "2024-03-04T10:08:25Z",
+  "count" : 128,
   "count_minmax" : [ 111, 298 ],
-  "count_decinc" : [ -75, +298 ],
+  "count_decinc" : [ -170, +298 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
   "uniques_decinc" : [ -0, +1 ]
