@@ -1,0 +1,9 @@
+{
+  "timestamp" : "2024-03-04T10:08:25Z",
+  "count" : 110,
+  "count_minmax" : [ 110, 110 ],
+  "count_decinc" : [ -0, +110 ],
+  "uniques" : 2,
+  "uniques_minmax" : [ 2, 2 ],
+  "uniques_decinc" : [ -0, +2 ]
+}
