@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2024-03-04T01:04:56Z",
+  "timestamp" : "2024-03-04T10:08:25Z",
   "count_outdated" : 193323,
   "uniques_outdated" : 1959,
-  "count" : 197525,
-  "uniques" : 1986,
+  "count" : 197635,
+  "uniques" : 1988,
   "clones" : [
     {
       "timestamp": "2024-02-19T00:00:00Z",
-      "count": 223,
+      "count": 128,
       "count_minmax": [ 111, 298 ],
-      "count_decinc": [ 75, 298 ],
+      "count_decinc": [ 170, 298 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
@@ -127,6 +127,15 @@
       "count": 301,
       "count_minmax": [ 112, 301 ],
       "count_decinc": [ 0, 301 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ],
+      "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2024-03-04T00:00:00Z",
+      "count": 110,
+      "count_minmax": [ 110, 110 ],
+      "count_decinc": [ 0, 110 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
