@@ -1,10 +1,10 @@
 {
-  "count": 4127,
+  "count": 4142,
   "uniques": 2,
   "clones": [
     {
       "timestamp": "2024-02-19T00:00:00Z",
-      "count": 223,
+      "count": 128,
       "uniques": 1
     },
     {
@@ -70,6 +70,11 @@
     {
       "timestamp": "2024-03-03T00:00:00Z",
       "count": 301,
+      "uniques": 2
+    },
+    {
+      "timestamp": "2024-03-04T00:00:00Z",
+      "count": 110,
       "uniques": 2
     }
   ]
